# Progetto-Ingegneria

./: .gitignore  CMakeLists.txt  README.md  TODO.md
src/: main.cpp  main.hpp
src/dbutils/: pgutils.cpp  pgutils.hpp  rdutils.cpp  rdutils.hpp
src/server/: Customer.cpp  Customer.hpp  Shipper.cpp  Shipper.hpp  Supplier.cpp  Supplier.hpp  Tabelle e funzionalità.txt  User.hpp  customers.cpp  customers.hpp  fornitori.cpp  produttori.cpp  produttori.hpp  trasportatori.cpp  trasportatori.hpp  utils.cpp  utils.hpp
src/test-generator/: adjectives.txt  cities.txt  generator.cpp  generator.hpp  names.txt  products.txt  surnames.txt
